<resources>
    <string name="app_name">NotesApp</string>
    <string name="dont_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="already_have_an_account">Already have an account? LogIn</string>
    <string name="no_network_connectivity">No network available. Please try again!</string>
    <string name="enter_valid_email">Invalid email</string>
    <string name="enter_valid_password">Please enter a valid Password</string>
    <string name="enter_valid_name">Please enter a valid Name</string>
    <string name="enter_phone_number">Enter 10 digit phone number</string>
    <string name="empty_fields">Empty Fields</string>
    <string name="choose_password">Choose a password of at least 8 characters</string>
    <string name="notesapp_logo">NotesApp logo</string>
    <string name="notesapp">NotesApp</string>
    <string name="unlimited_premium_notes">Unlimited Premium Notes</string>
    <string name="get_started_msg_one">Don\'t waste time making Notes\nGet them delivered at your DoorStep</string>
    <string name="get_started_msg_two">Premium Educational Notes Delivered Hassle-Free</string>
    <string name="get_started_terms">By clicking \'Get Started\' you accept the Terms of Service and Privacy Policy</string>
    <string name="back_button">Back Button</string>
    <string name="choose_option">Choose Option</string>
    <string name="choose_student_flow">Choose student flow</string>
    <string name="choose_faculty_flow">Choose faculty flow</string>
    <string name="hint_username">Email id or Phone number</string>
    <string name="hint_password">Password</string>
    <string name="forget_password">Forget the password?</string>
    <string name="sign_in">Sign In</string>
    <string name="get_started">Get Started</string>
    <string name="transition_ellipse">transitionEllipse</string>
    <string name="transition_rect">transitionRect</string>
    <string name="title_forget_password">Forget Password ?</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="full_name">Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="do_you_have_an_account_signin">Do you have an account? SignIn</string>
    <string name="dont_have_an_account">Don\'t have an account? Sign Up</string>
    <string name="you_will_get_an_otp_message">You will get an OTP message</string>
    <string name="verification_code_msg">Please type the verification code sent to</string>
    <string name="resend_code_text">Didn\'t receive the code?</string>
    <string name="sucessfully_registered">Sucessfully Registered</string>
    <string name="verify_number_msg">Please verify your Phone Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="country_code">+91</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="toast_otp_success_msg">OTP sent successfully</string>
    <string name="resend_click_text"><u>RESEND</u></string>
    <string name="branch_header">BRANCH</string>
    <string name="course_header">COURSE</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Rs">\u20B9</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="cart_plus">+</string>
    <string name="cart_minus">-</string>
    <string name="my_cart">My Cart</string>
    <string name="total">Total:</string>
    <string name="toast_added_to_cart_msg">Notes added to Cart</string>
    <string name="move_to_wishlist">MOVE TO WISHLIST</string>
    <string name="toast_add_to_wishlist">Notes added To Wishlist</string>
    <string name="checkout">Checkout</string>
    <string name="add_new_delivery_address">Add New Delivery Address</string>
    <string name="new_delivery_address">New Delivery Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="house_number">House Number</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="landmark">Landmark</string>
    <string name="city">City</string>
    <string name="pin_code">Pin code</string>
    <string name="save_address">SAVE ADDRESS</string>
    <string name="proceed_to_check_out">PROCEED TO CHECK OUT</string>
</resources>
