<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="addressViewModel"
            type="com.example.notesapp.address.AddressViewModel" />

        <variable
            name="clickHandler"
            type="com.example.notesapp.address.AddressActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppThemeNoActionBar.AppBarOverlay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:theme="@style/AppTheme">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:id="@+id/imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:background="@drawable/ic_dashboard_back"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="3.5sp"
                        android:text="@string/checkout"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/tv_checkout_proceed_click"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_delivery_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:lineSpacingExtra="2.5sp"
                        android:text="@string/delivery_address"
                        android:textColor="@color/cart_quantity_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_delivery_address" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_add_address_click"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:lineSpacingExtra="3.5sp"
                        android:onClick="@{clickHandler::onClick}"
                        android:text="@string/add_new_delivery_address"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_address" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_new_delivery_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/new_delivery_address"
                        android:textColor="@color/cart_quantity_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        app:layout_constraintHorizontal_bias="0.498"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/rv_address" />

                    <EditText
                        android:id="@+id/et_house_number"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="32dp"
                        android:addTextChangedListener="@{addressViewModel.houseNumberWatcher}"
                        android:background="@drawable/background_selector_edittext"
                        android:drawablePadding="15dp"
                        android:ellipsize="end"
                        android:hint="@string/house_number"
                        android:imeOptions="actionNext"
                        android:paddingStart="15dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:singleLine="true"
                        android:textColorHint="@color/colorGrey"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_new_delivery_address"
                        app:layout_constraintVertical_bias="0.10" />

                    <EditText
                        android:id="@+id/et_address_line_1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:addTextChangedListener="@{addressViewModel.addressLine1Watcher}"
                        android:background="@drawable/background_selector_edittext"
                        android:drawablePadding="15dp"
                        android:ellipsize="end"
                        android:hint="@string/address_line_1"
                        android:imeOptions="actionNext"
                        android:paddingStart="15dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:singleLine="true"
                        android:textColorHint="@color/colorGrey"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_house_number"
                        app:layout_constraintVertical_bias="0.10" />

                    <EditText
                        android:id="@+id/et_address_line_2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:addTextChangedListener="@{addressViewModel.addressLine2Watcher}"
                        android:background="@drawable/background_selector_edittext"
                        android:drawablePadding="15dp"
                        android:ellipsize="end"
                        android:hint="@string/address_line_2"
                        android:paddingStart="15dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:singleLine="true"
                        android:textColorHint="@color/colorGrey"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_address_line_1"
                        app:layout_constraintVertical_bias="0.10" />

                    <EditText
                        android:id="@+id/et_landmark"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:addTextChangedListener="@{addressViewModel.landMarkWatcher}"
                        android:background="@drawable/background_selector_edittext"
                        android:drawablePadding="15dp"
                        android:ellipsize="end"
                        android:hint="@string/landmark"
                        android:imeOptions="actionNext"
                        android:paddingStart="15dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:singleLine="true"
                        android:textColorHint="@color/colorGrey"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_address_line_2"
                        app:layout_constraintVertical_bias="0.10" />

                    <EditText
                        android:id="@+id/et_city"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:addTextChangedListener="@{addressViewModel.cityWatcher}"
                        android:background="@drawable/background_selector_edittext"
                        android:drawablePadding="15dp"
                        android:ellipsize="end"
                        android:hint="@string/city"
                        android:imeOptions="actionNext"
                        android:paddingStart="15dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:singleLine="true"
                        android:textColorHint="@color/colorGrey"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_landmark"
                        app:layout_constraintVertical_bias="0.10" />

                    <EditText
                        android:id="@+id/et_pin_code"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="32dp"
                        android:addTextChangedListener="@{addressViewModel.pinCodeWatcher}"
                        android:background="@drawable/background_selector_edittext"
                        android:drawablePadding="15dp"
                        android:ellipsize="end"
                        android:hint="@string/pin_code"
                        android:imeOptions="actionDone"
                        android:paddingStart="15dp"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:singleLine="true"
                        android:textColorHint="@color/colorGrey"
                        android:visibility="gone"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_city"
                        app:layout_constraintVertical_bias="0.10" />

                    <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
                        android:id="@+id/bt_save_address"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="56dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginBottom="32dp"
                        android:layout_marginEnd="56dp"
                        android:background="@drawable/shape_bg_button"
                        android:gravity="center"
                        android:onClick="@{clickHandler::onClick}"
                        android:text="@string/save_address"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:visibility="gone"
                        app:finalCornerAngle="30dp"
                        app:initialCornerAngle="30dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_pin_code"
                        app:layout_constraintVertical_bias="0.8"
                        app:spinning_bar_color="#FFF"
                        app:spinning_bar_padding="6dp"
                        app:spinning_bar_width="4dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </ScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_checkout_proceed_click"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:lineSpacingExtra="2.5sp"
            android:text="@string/proceed_to_check_out"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>